# c-link

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .jenkins  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/: README.md
cmake/: ClinkConfig-relwithdebinfo.cmake  ClinkConfig.cmake  Linux.cmake  Windows.cmake  rt-kernel.cmake
docs/: CMakeLists.txt  README.txt  abbreviations.rst  about_c-link.rst  analyze_code.py  capturing_packets.rst  cciefb-primer.rst  compile_with_clang.rst  compliancetesting.rst  compliancetesting_master.rst  conf.py  contributing.rst  csp_files.rst  developer_documentation.rst  development.rst  documentation.rst  fuzz_test.rst  getting-started.rst  hardware.rst  implementation_details.rst  implementation_requirements.csv  index.rst  librequirements.py  loglevels.rst  manual_tests.rst  master_api.rst  parse_requirements.py  parse_statemachine.py  reference_stack.rst  requirements.txt  running-sample.rst  slave_api.rst  spelling-wordlist.txt  static_analysis.rst  tests_in_qemu.rst  tests_on_linux.rst  using_gxworks.rst  windows_howto.rst
fuzz/: CMakeLists.txt  cl_fuzz_master_cyclic.c  cl_fuzz_master_slmp.c  cl_fuzz_slave_cyclic.c  cl_fuzz_slave_slmp.c  run_fuzzing.sh
fuzz/corpus/master_cyclic/: cyclic_response.raw  cyclic_response_master_duplication.raw
fuzz/corpus/master_slmp/: set_ip_error_response.raw  set_ip_response.raw
fuzz/corpus/slave_cyclic/: cciefb_request.raw  cciefb_request_invalid_occupied.raw
fuzz/corpus/slave_slmp/: nodesearch_request.raw  setip_request.raw
include/: cl_common.h  cl_export.h  cl_options.h  cl_options.h.in  cl_version.h  cl_version.h.in  clm_api.h  cls_api.h
sample_apps/: 0x1067_Sampleapp_0x0002_en.cspp  CMakeLists.txt  cl_sample_common.h  cl_sample_master_common.c  cl_sample_master_common.h  cl_sample_slave_common.c  cl_sample_slave_common.h
src/: CMakeLists.txt
src/common/: cl_eth.c  cl_eth.h  cl_file.c  cl_file.h  cl_iefb.c  cl_iefb.h  cl_limiter.c  cl_limiter.h  cl_literals.c  cl_literals.h  cl_slmp.c  cl_slmp.h  cl_slmp_udp.c  cl_slmp_udp.h  cl_timer.c  cl_timer.h  cl_types.h  cl_util.c  cl_util.h  clal.h
src/master/: clm_api.c  clm_iefb.c  clm_iefb.h  clm_master.c  clm_master.h  clm_slmp.c  clm_slmp.h
src/slave/: cls_api.c  cls_iefb.c  cls_iefb.h  cls_slave.c  cls_slave.h  cls_slmp.c  cls_slmp.h
test/: .clang-tidy  CMakeLists.txt  cl_test.cpp  mocks.cpp  mocks.h  test_both_master_slave.cpp  test_common_eth.cpp  test_common_file.cpp  test_common_iefb.cpp  test_common_limiter.cpp  test_common_literals.cpp  test_common_slmp.cpp  test_common_slmp_udp.cpp  test_common_timer.cpp  test_common_util.cpp  test_master.cpp  test_master_api.cpp  test_master_iefb.cpp  test_master_slmp.cpp  test_memory_functions.cpp  test_slave.cpp  test_slave_api.cpp  test_slave_iefb.cpp  test_slave_slmp.cpp  utils_for_testing.cpp  utils_for_testing.h
